--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-ace": "^5.4.0",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
   },
